# jni_helper

./: Cargo.toml  README.md  RustNative.java
src/: fun.rs  jni.rs  lib.rs  utils.rs
